--- a/src/main/resources/templates/etudiants.html
+++ b/src/main/resources/templates/etudiants.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="UTF-8"/>
+    <title>Liste des étudiants</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/5.1.3/css/bootstrap.min.css">
 </head>
 <body>
+
+    <table class="table">
+        <thead>
+        <tr>
+            <th> ID </th>
+            <th> Nom </th>
+            <th> Date de naissance </th>
+            <th> Email </th>
+            <th> Photo </th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="e:${etudiants}">
+            <td th:text="${e.id}"></td>
+            <td th:text="${e.nom}"></td>
+            <td th:text="${e.dateNaissance}"></td>
+            <td th:text="${e.email}"></td>
+            <td th:text="${e.photo}"></td>
+            <td >
+                <a class="btn btn-danger">
+                    Supprimer
+                </a>
+            </td>
+            <td >
+                <a class="btn btn-success">
+                    Editer
+                </a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
 </body>
 </html>
