--- a/src/main/resources/templates/etudiants.html
+++ b/src/main/resources/templates/etudiants.html
@@ -4,39 +4,58 @@
     <meta charset="UTF-8"/>
     <title>Liste des étudiants</title>
     <link rel="stylesheet" href="/webjars/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 
-    <table class="table">
-        <thead>
-        <tr>
-            <th> ID </th>
-            <th> Nom </th>
-            <th> Date de naissance </th>
-            <th> Email </th>
-            <th> Photo </th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="e:${etudiants}">
-            <td th:text="${e.id}"></td>
-            <td th:text="${e.nom}"></td>
-            <td th:text="${e.dateNaissance}"></td>
-            <td th:text="${e.email}"></td>
-            <td th:text="${e.photo}"></td>
-            <td >
-                <a class="btn btn-danger">
-                    Supprimer
-                </a>
-            </td>
-            <td >
-                <a class="btn btn-success">
-                    Editer
-                </a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+    <div class="container spacer">
+        <form th:action="@{index}" method="get">
+            <div class="form-group">
+                <label>Mot clé:</label>
+                <input type="text" name="motCle">
+                <button type="submit">Chercher</button>
+            </div>
+        </form>
+    </div>
+    <div class="container">
+        <table class="table table-stripe">
+            <thead>
+            <tr>
+                <th> ID </th>
+                <th> Nom </th>
+                <th> Date de naissance </th>
+                <th> Email </th>
+                <th> Photo </th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="e:${PageEtudiants.content}">
+                <td th:text="${e.id}"></td>
+                <td th:text="${e.nom}"></td>
+                <td th:text="${e.dateNaissance}"></td>
+                <td th:text="${e.email}"></td>
+                <td th:text="${e.photo}"></td>
+                <td >
+                    <a class="btn btn-danger">
+                        Supprimer
+                    </a>
+                </td>
+                <td >
+                    <a class="btn btn-success">
+                        Editer
+                    </a>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="container">
+        <ul class="nav  nav-pills">
+            <li th:each="p:${pages}" th:class="${p==pageCourante}?active:''">
+                <a class="btn btn-muted m-lg-1" th:text="${p}" th:href="@{index(page=${p})}"></a>
+            </li>
+        </ul>
+    </div>>
 
 </body>
 </html>
