--- a/src/main/resources/templates/etudiants.html
+++ b/src/main/resources/templates/etudiants.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://www.thymeleaf.org">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="template">
 <head>
     <meta charset="UTF-8"/>
     <title>Liste des étudiants</title>
@@ -8,54 +10,62 @@
 </head>
 <body>
 
-    <div class="container spacer">
-        <form th:action="@{index}" method="get">
-            <div class="form-group">
-                <label>Mot clé:</label>
-                <input type="text" name="motCle" th:value="${motCle}">
-                <button type="submit">Chercher</button>
-            </div>
-        </form>
-    </div>
-    <div class="container">
-        <table class="table table-stripe">
-            <thead>
-            <tr>
-                <th> ID </th>
-                <th> Nom </th>
-                <th> Date de naissance </th>
-                <th> Email </th>
-                <th> Photo </th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="e:${PageEtudiants.content}">
-                <td th:text="${e.id}"></td>
-                <td th:text="${e.nom}"></td>
-                <td th:text="${e.dateNaissance}"></td>
-                <td th:text="${e.email}"></td>
-                <td th:text="${e.photo}"></td>
-                <td >
-                    <a class="btn btn-danger">
-                        Supprimer
-                    </a>
-                </td>
-                <td >
-                    <a class="btn btn-success">
-                        Editer
-                    </a>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="container">
-        <ul class="nav  nav-pills">
-            <li th:each="p:${pages}" th:class="${p==pageCourante}?active:''">
-                <a class="btn btn-muted m-lg-1" th:text="${p}" th:href="@{index(page=${p},motCle=${motCle})}"></a>
-            </li>
-        </ul>
-    </div>>
+    <section layout:fragment="content1">
+        <div class="container spacer">
+            <a th:href="@{form}">Ajouter étudiant</a>
+        </div>
+
+        <div class="container spacer">
+            <form th:action="@{index}" method="get">
+                <div class="form-group">
+                    <label>Mot clé:</label>
+                    <input type="text" name="motCle" th:value="${motCle}">
+                    <button type="submit">Chercher</button>
+                </div>
+            </form>
+        </div>
+        <div class="container">
+            <table class="table table-stripe">
+                <thead>
+                <tr>
+                    <th> ID </th>
+                    <th> Nom </th>
+                    <th> Date de naissance </th>
+                    <th> Email </th>
+                    <th> Photo </th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="e:${PageEtudiants.content}">
+                    <td th:text="${e.id}"></td>
+                    <td th:text="${e.nom}"></td>
+                    <td th:text="${e.dateNaissance}"></td>
+                    <td th:text="${e.email}"></td>
+                    <td>
+                        <img class="rounded-circle" th:src="@{getPhoto(id=${e.id})}" width="50" height="50"/>
+                    </td>
+                    <td >
+                        <a class="btn btn-danger" onclick="return confirm('Êtes vous sûr de supprimer?')" th:href="@{supprimer(id=${e.id})}">
+                            Supprimer
+                        </a>
+                    </td>
+                    <td >
+                        <a class="btn btn-success" th:href="@{edit(id=${e.id})}">
+                            Editer
+                        </a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+        <div class="container">
+            <ul class="nav  nav-pills">
+                <li th:each="p:${pages}" th:class="${p==pageCourante}?active:''">
+                    <a class="btn btn-muted m-lg-1" th:text="${p}" th:href="@{index(page=${p},motCle=${motCle})}"></a>
+                </li>
+            </ul>
+        </div>
+    </section>
 
 </body>
 </html>
